*** empty log message ***

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,10 +31,16 @@ aclocal_DATA = $(aclocal_macros)
 # The standalone libtool script, and the libtool distributor.
 bin_SCRIPTS = libtool libtoolize
 
-libtool: ltconfig ltmain.sh
+libtool: ltmain.sh ltconfig
 	CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
 	LD="$(LD)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
-	$(SHELL) $(srcdir)/ltconfig --srcdir=$(srcdir) $(srcdir)/ltmain.sh
+	$(SHELL) $(srcdir)/ltconfig --srcdir=$(srcdir) --output=$@  $<
+
+# Experimental C version of libtool.
+clibtool: ltmain.c ltconfig
+	CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
+	LD="$(LD)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
+	$(SHELL) $(srcdir)/ltconfig --srcdir=$(srcdir) --output=$@ $<
 
 libtoolize: libtoolize.in $(top_builddir)/config.status
 	CONFIG_FILES=libtoolize CONFIG_HEADERS= $(top_builddir)/config.status
