* demo/Makefile.am (objdir): there are no longer quotes around 	objdir in the libtool script

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -35,7 +35,7 @@ helldl: libhello.la
 
 # Unfortunately, in order to test libtool thoroughly, we need access
 # to its private directory.
-objdir = `sed -n -e 's/^objdir=\"\(.*\)\"$$/\1/p' ./libtool`
+objdir = `sed -n -e 's/^objdir=\(.*\)$$/\1/p' ./libtool`
 
 TESTS = run.test
 
