--- a/ltmain.in
+++ b/ltmain.in
@@ -1093,6 +1093,11 @@ if test -z "$show_help"; then
 	  major=
 	  versuffix=
 	  verstring="0.0"
+	  case "$version_type" in
+	  sunos)
+	    versuffix=".0.0"
+	    ;;
+	  esac
 	fi
 
 	# Check to see if the archive will have undefined symbols.
